near_gens features made user friendly

--- a/notebook/2020-09-07-annotations/2020-09-07-annotations.ipynb
+++ b/notebook/2020-09-07-annotations/2020-09-07-annotations.ipynb
@@ -114,6 +114,16 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "colnames = ['near_gens_Distance to Nearest Upstream Gene', 'near_gens_Distance to Nearest Downstream Gene']\n",
+    "fulldata = SNPnexus.multi_str2num(fulldata, colnames=colnames)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -121,7 +131,7 @@
        "(11824, 136)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +152,7 @@
        "(6426, 136)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,6 +161,164 @@
     "data = SNPnexus.filter_fulldata(fulldata)\n",
     "pickle.dump(data, open(fpath + '.p', 'wb'))\n",
     "data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>near_gens_Distance to Nearest Upstream Gene</th>\n",
+       "      <th>near_gens_Distance to Nearest Downstream Gene</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Individual ID</th>\n",
+       "      <th>CHROM</th>\n",
+       "      <th>POS</th>\n",
+       "      <th>Mutation</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">CMC_MSSM_027</th>\n",
+       "      <th rowspan=\"5\" valign=\"top\">1</th>\n",
+       "      <th>11973569</th>\n",
+       "      <th>C/T</th>\n",
+       "      <td>3585.0</td>\n",
+       "      <td>6079.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>67324428</th>\n",
+       "      <th>A/T</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>182008461</th>\n",
+       "      <th>C/T</th>\n",
+       "      <td>199552.0</td>\n",
+       "      <td>15244.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>207598957</th>\n",
+       "      <th>C/T</th>\n",
+       "      <td>64646.0</td>\n",
+       "      <td>28618.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>219342012</th>\n",
+       "      <th>C/T</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <th>...</th>\n",
+       "      <th>...</th>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">UMB914</th>\n",
+       "      <th rowspan=\"5\" valign=\"top\">frontal cortex</th>\n",
+       "      <th rowspan=\"2\" valign=\"top\">21</th>\n",
+       "      <th>46019920</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47550806</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <th>22117099</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">X</th>\n",
+       "      <th>99255811</th>\n",
+       "      <td>113122.0</td>\n",
+       "      <td>99271.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>130133640</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>6426 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                  near_gens_Distance to Nearest Upstream Gene  \\\n",
+       "Individual ID CHROM          POS       Mutation                                                 \n",
+       "CMC_MSSM_027  1              11973569  C/T                                             3585.0   \n",
+       "                             67324428  A/T                                                NaN   \n",
+       "                             182008461 C/T                                           199552.0   \n",
+       "                             207598957 C/T                                            64646.0   \n",
+       "                             219342012 C/T                                                NaN   \n",
+       "...                                                                                       ...   \n",
+       "UMB914        frontal cortex 21        46019920                                           NaN   \n",
+       "                                       47550806                                           NaN   \n",
+       "                             22        22117099                                           NaN   \n",
+       "                             X         99255811                                      113122.0   \n",
+       "                                       130133640                                          NaN   \n",
+       "\n",
+       "                                                  near_gens_Distance to Nearest Downstream Gene  \n",
+       "Individual ID CHROM          POS       Mutation                                                  \n",
+       "CMC_MSSM_027  1              11973569  C/T                                               6079.0  \n",
+       "                             67324428  A/T                                                  NaN  \n",
+       "                             182008461 C/T                                              15244.0  \n",
+       "                             207598957 C/T                                              28618.0  \n",
+       "                             219342012 C/T                                                  NaN  \n",
+       "...                                                                                         ...  \n",
+       "UMB914        frontal cortex 21        46019920                                             NaN  \n",
+       "                                       47550806                                             NaN  \n",
+       "                             22        22117099                                             NaN  \n",
+       "                             X         99255811                                         99271.0  \n",
+       "                                       130133640                                            NaN  \n",
+       "\n",
+       "[6426 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[colnames]"
    ]
   },
   {
@@ -164,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +696,7 @@
        " 'structvar_Type_other']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -564,7 +732,7 @@
        "['named-figure/corr-mat-snpnexus.png', 'named-figure/corr-mat-snpnexus.pdf']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -600,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -609,7 +777,7 @@
        "['named-figure/corr-Dx-snpnexus.png', 'named-figure/corr-Dx-snpnexus.pdf']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -668,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
