--- a/notebook/2020-11-13-functional-variants/2020-11-13-functional-variants.ipynb
+++ b/notebook/2020-11-13-functional-variants/2020-11-13-functional-variants.ipynb
@@ -47,11 +47,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "annot = SNPnexus.load_data('/home/attila/projects/bsm/results/2020-09-07-annotations/annotated-calls.p')"
+    "D = SNPnexus.load_data('/home/attila/projects/bsm/results/2020-09-07-annotations/annotated-calls.p')"
    ]
   },
   {
@@ -2791,7 +2791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
