new ways of cleaning SNPnexus annotations

--- a/notebook/2020-09-07-annotations/2020-09-07-annotations.ipynb
+++ b/notebook/2020-09-07-annotations/2020-09-07-annotations.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,11 +62,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "fulldata = SNPnexus.merge_snpnexus_with_other_annotations(calls=individuals.get_datasets(), testmode=False)"
+    "fulldata = SNPnexus.merge_snpnexus_with_other_annotations(calls=individuals.get_datasets())"
    ]
   },
   {
@@ -271,38 +271,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\n",
-      "  \"shell_port\": 38305,\n",
-      "  \"iopub_port\": 54445,\n",
-      "  \"stdin_port\": 36515,\n",
-      "  \"control_port\": 51735,\n",
-      "  \"hb_port\": 39885,\n",
-      "  \"ip\": \"127.0.0.1\",\n",
-      "  \"key\": \"0b93ac47-b443c5395aad5d416e858e08\",\n",
-      "  \"transport\": \"tcp\",\n",
-      "  \"signature_scheme\": \"hmac-sha256\",\n",
-      "  \"kernel_name\": \"\"\n",
-      "}\n",
-      "\n",
-      "Paste the above JSON into a file, and connect with:\n",
-      "    $> jupyter <app> --existing <file>\n",
-      "or, if you are local, you can connect with just:\n",
-      "    $> jupyter <app> --existing kernel-40fe2855-849b-4cac-bf00-f7ffef54a837.json\n",
-      "or even just:\n",
-      "    $> jupyter <app> --existing\n",
-      "if this is the most recent Jupyter kernel you have started.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%connect_info"
    ]
