list valued (nested) dict for near_gens annotations

--- a/notebook/2020-09-07-annotations/2020-09-07-annotations.ipynb
+++ b/notebook/2020-09-07-annotations/2020-09-07-annotations.ipynb
@@ -27,6 +27,7 @@
     "import numpy as np\n",
     "import re\n",
     "import pickle\n",
+    "import os.path\n",
     "import attila_utils\n",
     "%matplotlib inline"
    ]
@@ -55,113 +56,115 @@
     "1. redundance: several sets annotations provide very similar information therefore only one of those were included\n",
     "2. relevance: cancer related annotations were excluded\n",
     "\n",
-    "### Implementation\n",
+    "## Implementation\n",
     "\n",
-    "See `SNPnexus.merge_snpnexus_with_other_annotations` for details"
+    "See `SNPnexus.do_annot` for details"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loading raw annotations DataFrame from /home/attila/projects/bsm/results/2020-09-07-annotations/annot.p\n",
+      "writing raw annotations DataFrame to CSV /home/attila/projects/bsm/results/2020-09-07-annotations/annot.csv\n"
+     ]
+    }
+   ],
    "source": [
-    "fulldata = SNPnexus.merge_snpnexus_with_other_annotations(calls=individuals.get_datasets())"
+    "calls = individuals.get_datasets()\n",
+    "fpath = '/home/attila/projects/bsm/results/2020-09-07-annotations/annot'\n",
+    "picklepath = fpath + '.p'\n",
+    "csvpath = fpath + '.csv'\n",
+    "if not os.path.exists(picklepath):\n",
+    "    annot_raw = SNPnexus.do_annot(calls=calls)\n",
+    "else:\n",
+    "    print('loading raw annotations DataFrame from', picklepath)\n",
+    "    with open(picklepath, 'rb') as f:\n",
+    "        annot_raw = pickle.load(f)\n",
+    "print('writing raw annotations DataFrame to CSV', csvpath)\n",
+    "annot_raw.to_csv(csvpath)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "MultiIndex: 11824 entries, ('AN02255', 'frontal cortex', '1', 4798634, 'T/G') to ('UMB914', 'frontal cortex', 'X', 130133640, 'C/T')\n",
+      "Columns: 130 entries, REF to remm_ReMM Score\n",
+      "dtypes: Int64(23), category(47), float64(50), int64(2), object(8)\n",
+      "memory usage: 9.4+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "fpath = '/home/attila/projects/bsm/results/2020-09-07-annotations/annotated-calls'\n",
+    "# write files without filtering\n",
+    "data = SNPnexus.merge_clean(calls, annot_raw, dofilter=False)\n",
+    "data.to_csv(fpath + '-full.csv')\n",
+    "pickle.dump(data, open(fpath + '-full.p', 'wb'))\n",
+    "data.info()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Save data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Export `fulldata` as `annotated-calls-full.csv` or pickle dump into `annotated-calls-full.p`.\n",
-    "\n",
-    "Note that `fulldata` contains superfluous sets of observations:\n",
+    "Note that these data contain superfluous observations:\n",
     "* NeuN_mn or muscle tissue from the Chess dataset\n",
     "* low quality calls for the Walsh dataset\n",
     "\n",
-    "`SNPnexus.filter_fulldata` removes these"
+    "We remove these with `dofilter=True`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "MultiIndex: 6426 entries, ('CMC_MSSM_027', '1', 11973569, 'C/T') to ('UMB914', 'X', 130133640, 'C/T')\n",
+      "Columns: 130 entries, REF to remm_ReMM Score\n",
+      "dtypes: Int64(23), category(47), float64(50), int64(2), object(8)\n",
+      "memory usage: 5.3+ MB\n"
+     ]
+    }
+   ],
    "source": [
-    "fpath = '/home/attila/projects/bsm/results/2020-09-07-annotations/annotated-calls'\n",
-    "fulldata.to_csv(fpath + '-full.csv')\n",
-    "SNPnexus.filter_fulldata(fulldata).to_csv(fpath + '.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "colnames = ['near_gens_Overlapped Gene', 'near_gens_Type', 'near_gens_Annotation', 'near_gens_Nearest Upstream Gene', 'near_gens_Type of Nearest Upstream Gene', 'near_gens_Nearest Downstream Gene', 'near_gens_Type of Nearest Downstream Gene']\n",
-    "fulldata = SNPnexus.multi_str2list(fulldata, colnames=colnames, nonestr='None', sepstr=':')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "colnames = ['near_gens_Distance to Nearest Upstream Gene', 'near_gens_Distance to Nearest Downstream Gene']\n",
-    "fulldata = SNPnexus.multi_str2num(fulldata, colnames=colnames)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pickle.dump(fulldata, open(fpath + '-full.p', 'wb'))\n",
-    "fulldata.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = SNPnexus.filter_fulldata(fulldata)\n",
+    "# repeat with filtering\n",
+    "data = SNPnexus.merge_clean(calls, annot_raw, dofilter=True)\n",
+    "data.to_csv(fpath + '.csv')\n",
     "pickle.dump(data, open(fpath + '.p', 'wb'))\n",
-    "data.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data[colnames]"
+    "#del annot_raw\n",
+    "data.info()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### How to load data?\n",
+    "## How to load data?\n",
     "\n",
     "See implementation: `SNPnexus.load_data()`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,17 +182,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "datanum = preprocessing.dummify_df(data)\n",
-    "list(datanum.columns)"
+    "#datanum = preprocessing.dummify_df(data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,62 +201,9 @@
     "    sm.graphics.plot_corr(corrmat, ax=ax, xnames=dfnum.columns, ynames=dfnum.columns)\n",
     "    cb = plt.colorbar(ax.get_images()[0])\n",
     "    cb.set_label('Correlation')\n",
-    "    return((fig, ax))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sel_cols = ['Dx_SCZ', 'Dx_Control', 'AntipsychTyp_1', 'EV.1', 'EV.2', 'EV.3']\n",
-    "sel_cols += ['encode_Feature Type Class_Polymerase', 'encode_Feature Type Class_Transcription Factor', 'encode_Feature Type Class_Histone']\n",
-    "sel_cols += ['ensembl_Predicted Function_coding', 'ensembl_Predicted Function_intronic', 'ensembl_Predicted Function_5utr', 'ensembl_Predicted Function_3utr', 'ensembl_Predicted Function_5upstream', 'ensembl_Predicted Function_3downstream', 'ensembl_Predicted Function_non-coding intronic', 'ensembl_Predicted Function_non-coding', 'ensembl_Predicted Function_other']\n",
-    "sel_cols += ['sift_Prediction_Deleterious', 'sift_Prediction_Deleterious - Low Confidence', 'sift_Prediction_Tolerated', 'sift_Prediction_Tolerated - Low Confidence', 'sift_Prediction_other']\n",
-    "sel_cols += ['1KGen_AFR Frequency_bin', '1KGen_AMR Frequency_bin', '1KGen_EAS Frequency_bin', '1KGen_EUR Frequency_bin', '1KGen_SAS Frequency_bin']\n",
-    "sel_cols += ['szdbCNVcount','GWASpval', 'ChromatinState_DLPFC_TssA']\n",
-    "sel_cols += ['gerp_Element RS Score_bin', 'phast_Score_bin']\n",
-    "sel_cols += ['cpg_CpG Island_bin']\n",
-    "sel_cols += ['deepsea_Functional Significance Score', 'deepsea_eQTL Probability', 'deepsea_GWAS Probability', 'deepsea_HGMD Probability']\n",
-    "sel_cols += ['structvar_Type_complex', 'structvar_Type_loss', 'structvar_Type_gain', 'structvar_Type_other']\n",
-    "sel_cols += ['regbuild_Epigenome_nervoussys_bin']\n",
-    "sel_cols += ['tfbs_TFBS Name_bin']\n",
-    "fig, ax = corrmatplot(datanum[sel_cols])\n",
-    "attila_utils.savefig(fig, 'corr-mat-snpnexus')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig = plt.figure(figsize=(3,8))\n",
-    "s = datanum.corr().loc[sel_cols, 'Dx_SCZ'][2:]\n",
-    "ax = s.plot.barh()\n",
-    "ax.vlines(x=0, ymin=0, ymax=len(sel_cols), colors='red', linestyles='dotted')\n",
-    "ax.set_title('Correlation with Dx_SCZ')\n",
-    "attila_utils.savefig(fig, 'corr-Dx-snpnexus')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Evolutionary constraints\n",
+    "    return((fig, ax))\n",
     "\n",
-    "Four evolutionary conservation scores by three methods are compared to each other below\n",
-    "\n",
-    "* gerp++ has two RS (rejected substitution) scores\n",
-    "* `gerp_Element RS Score` refers to conservative elements while `gerp_Base RS Score` to conservative bases"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The missing plots illustrated the relationship between `phast_Score` and `gerp_Element RS Score` (left) as well as that between `gerp_Base vs gerp_Element` and `gerp_Element RS Score` (right)."
+    "#fig, ax = corrmatplot(datanum)"
    ]
   },
   {
@@ -271,11 +220,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"shell_port\": 53763,\n",
+      "  \"iopub_port\": 53021,\n",
+      "  \"stdin_port\": 60157,\n",
+      "  \"control_port\": 34465,\n",
+      "  \"hb_port\": 39563,\n",
+      "  \"ip\": \"127.0.0.1\",\n",
+      "  \"key\": \"7dfa234b-fe91a55f6f424e7a53077247\",\n",
+      "  \"transport\": \"tcp\",\n",
+      "  \"signature_scheme\": \"hmac-sha256\",\n",
+      "  \"kernel_name\": \"\"\n",
+      "}\n",
+      "\n",
+      "Paste the above JSON into a file, and connect with:\n",
+      "    $> jupyter <app> --existing <file>\n",
+      "or, if you are local, you can connect with just:\n",
+      "    $> jupyter <app> --existing kernel-54a61a9b-348c-4ba3-95eb-27b125e73b6d.json\n",
+      "or even just:\n",
+      "    $> jupyter <app> --existing\n",
+      "if this is the most recent Jupyter kernel you have started.\n"
+     ]
+    }
+   ],
    "source": [
     "%connect_info"
    ]
