query function tested with gene sets

--- a/notebook/2020-11-13-functional-variants/2020-11-13-functional-variants.ipynb
+++ b/notebook/2020-11-13-functional-variants/2020-11-13-functional-variants.ipynb
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -298,27 +298,36 @@
        "      <td>262</td>\n",
        "      <td>610</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>near_gens_Overlapped Gene</th>\n",
+       "      <th>SCZ GWAS genes</th>\n",
+       "      <td>42</td>\n",
+       "      <td>20</td>\n",
+       "      <td>66</td>\n",
+       "      <td>128</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Dx                                                  ASD  Control  SCZ  All\n",
-       "Feature               Query                                               \n",
-       "near_gens_Annotation  coding nonsyn                  23       23   43   89\n",
-       "                      missense                        0        0    0    0\n",
-       "                      stop-gain                       0        1    0    1\n",
-       "                      intronic (splice_site)          0        0    1    1\n",
-       "sift_Prediction       Deleterious                     6        8    9   23\n",
-       "                      Deleterious - Low Confidence    2        1    1    4\n",
-       "polyphen_Prediction   Probably Damaging               2        3    5   10\n",
-       "                      Possibly Damaging               0        2    2    4\n",
-       "tfbs_TFBS Name        any                            50       48   78  176\n",
-       "phast_Score           any                           141      102  174  417\n",
-       "gerp_Element RS Score any                           208      140  262  610"
+       "Dx                                                      ASD  Control  SCZ  All\n",
+       "Feature                   Query                                               \n",
+       "near_gens_Annotation      coding nonsyn                  23       23   43   89\n",
+       "                          missense                        0        0    0    0\n",
+       "                          stop-gain                       0        1    0    1\n",
+       "                          intronic (splice_site)          0        0    1    1\n",
+       "sift_Prediction           Deleterious                     6        8    9   23\n",
+       "                          Deleterious - Low Confidence    2        1    1    4\n",
+       "polyphen_Prediction       Probably Damaging               2        3    5   10\n",
+       "                          Possibly Damaging               0        2    2    4\n",
+       "tfbs_TFBS Name            any                            50       48   78  176\n",
+       "phast_Score               any                           141      102  174  417\n",
+       "gerp_Element RS Score     any                           208      140  262  610\n",
+       "near_gens_Overlapped Gene SCZ GWAS genes                 42       20   66  128"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,9 +340,10 @@
     "             'tfbs_TFBS Name': None,\n",
     "             'phast_Score': None,\n",
     "             'gerp_Element RS Score': None,\n",
+    "             'near_gens_Overlapped Gene': {'SCZ GWAS genes': gwasgenes},\n",
     "            }\n",
-    "df = operations.multiquery(querydict, data, do_sum=True, do_sort=False, margin=True)\n",
-    "df"
+    "results = operations.multiquery(querydict, data, do_sum=False, do_sort=False, margin=True)\n",
+    "operations.summarize_query_results(results, data, margin=True)"
    ]
   },
   {
@@ -385,38 +395,6 @@
    "metadata": {},
    "source": [
     "The histogram suggests a cutoff somewhere between 0.5 and 0.6 score.  I will define functionally significant variants using both a more lenient and a more stringent threshold."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Loss of function variants\n",
-    "\n",
-    "These include stop-gain, intronic (splice_site), and frameshift.  Note that we didn't observe any frameshift variants.  These might be the most revealing."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'D' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-883f4b02c2e6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mcols\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'Dataset'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Dx'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'near_gens_Annotation'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'near_gens_Overlapped Gene'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mLoFrows\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mD\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'near_gens_Annotation'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mbool\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mintersection\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0;34m'stop-gain'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'intronic (splice_site)'\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mD\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mLoFrows\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcols\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'D' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "cols = ['Dataset', 'Dx', 'near_gens_Annotation', 'near_gens_Overlapped Gene']\n",
-    "LoFrows = D['near_gens_Annotation'].apply(lambda x: bool(set(x).intersection({'stop-gain', 'intronic (splice_site)'})))\n",
-    "D.loc[LoFrows, cols]"
    ]
   },
   {
